--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,19 +36,13 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm text center"><p>{{- site.data.strings.footer | escape -}}</p></div>
+      <div class="col-sm text center"><p>{{- site.data.strings.footer -}}</p></div>
     </div>
     <div class="row">
       <div class="col-sm">
         - 
         {%- for dep in site.data.dependencies -%}
           {%- if dep.disabled -%}
-            {%- continue -%}
-          {%- endif -%}
-          {%- if site.options.withWYSIWYGEditor == false and dep.isWYSIWYG -%}
-            {%- continue -%}
-          {%- endif -%}
-          {% if site.options.useFroalaEditor == false and dep.name == 'Froala Editor' %}
             {%- continue -%}
           {%- endif -%}
         <span class="mx-2 text-monospace"><a href="{{dep.link}}" target="_blank">{{ dep.name | escape }}</a></span> -
