--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -83,3 +83,95 @@ ul.pagination {
 .soil-nutrients-chart {
     height: 210px;
 }
+
+
+.farming-guide-winter { 
+    background-color: skyblue;
+    .card-header {
+        color: black;
+        background-color: skyblue;
+    }
+}
+.farming-guide-spring { 
+    background-color: greenyellow;
+    .card-header {
+        color: black;
+        background-color: greenyellow;
+    }
+}
+.farming-guide-summer { 
+    background-color: lightyellow;
+    .card-header {
+        color: black;
+        background-color: lightyellow;
+    }
+}
+.farming-guide-autumn { 
+    background-color: lightsalmon;
+    .card-header {
+        color: black;
+        background-color: lightsalmon;
+    }
+}
+
+.farming-guild-pills-balanced-nav-link {
+    border: 1px solid #543cdb !important;
+    &.active {
+        color: black !important;
+        background-color: lighten(#543cdb, 10) !important;
+    }
+}
+.farming-guild-pills-yield-nav-link {
+    border: 1px solid #3cdb57 !important;
+    &.active {
+        color: black !important;
+        background-color: lighten(#3cdb57, 10%) !important;
+    }
+}
+.farming-guild-pills-heartiness-nav-link {
+    border: 1px solid #db963c !important;
+    &.active {
+        color: black !important;
+        background-color: lighten(#db963c, 10%) !important;
+    }
+}
+.farming-guild-pills-aesthic-nav-link {
+    border: 1px solid #db3c3c !important;
+    &.active {
+        color: black !important;
+        background-color: lighten(#db3c3c, 10%) !important;
+    }
+}
+.farming-guild-pills-aroma-nav-link {
+    border: 1px solid #9b3cdb !important;
+    &.active {
+        color: black !important;
+        background-color: lighten(#9b3cdb, 10%) !important;
+    }
+}
+
+#nav-tab-spacing {
+    .active {
+        background-color: $primary;
+    }
+}
+
+.text-red-line {
+    color: red;
+}
+.text-orange-line {
+    color: orange;
+}
+.text-skyblue-line {
+    color: skyblue;
+}
+.text-springgreen-line {
+    color: springgreen;
+}
+.text-violet-line {
+    color: violet;
+}
+
+.farming-guild-content {
+    min-height: 700px;
+}
