--- a/_includes/guide-aesthic.html
+++ b/_includes/guide-aesthic.html
@@ -9,7 +9,7 @@
                     {{ site.data.strings.guide.tilling.sort_rice.lightly }}
                 </li>
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.tilling.sort_rice.thinly }}
+                    {{ site.data.strings.guide.tilling.sow_rice.thinly }}
                 </li>
                 <li class="list-group-item">
                     {{ site.data.strings.guide.tilling.fertilize_after_tilling }}
@@ -64,9 +64,6 @@
                 <li class="list-group-item">
                     {{ site.data.strings.guide.water.shallow }}
                 </li>
-                <li class="list-group-item">
-                    {{ site.data.strings.guide.water.short_dehydrate }}
-                </li>
             </ul>
         </div>
     </div>
@@ -83,7 +80,7 @@
                     {{ site.data.strings.guide.offshots_3.lock_ducks }}
                 </li>
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.water.dehydrate }}
+                    {{ site.data.strings.guide.offshots_3.short_dehydrate }}
                 </li>
             </ul>
         </div>
