--- a/_includes/guide-aroma.html
+++ b/_includes/guide-aroma.html
@@ -9,7 +9,7 @@
                     {{ site.data.strings.guide.tilling.sort_rice.lightly }}
                 </li>
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.tilling.sort_rice.thoroughly }}
+                    {{ site.data.strings.guide.tilling.sow_rice.thoroughly }}
                 </li>
                 <li class="list-group-item">
                     {{ site.data.strings.guide.tilling.use_root_fertilizer }}
@@ -80,7 +80,7 @@
                     {{ site.data.strings.guide.offshots_3.lock_ducks }}
                 </li>
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.water.dehydrate }}
+                    {{ site.data.strings.guide.offshots_3.dehydrate }}
                 </li>
             </ul>
         </div>
