--- a/_includes/site.html
+++ b/_includes/site.html
@@ -104,7 +104,7 @@
                                 Components
                             </div>
                             <div class="card-body p-0">
-                                <ul class="list-group">
+                                <ul class="list-group" id="lstFertilizeComponents">
                                     <li class="list-group-item">-</li>
                                     <li class="list-group-item">-</li>
                                     <li class="list-group-item">-</li>
