--- a/_includes/guide.html
+++ b/_includes/guide.html
@@ -27,43 +27,6 @@
             {% include guide-aroma.html %}
         </div>
       </div>
-      <ul class="list-group mt-2">
-        <li class="list-group-item">
-          <i class="fas fa-check"></i> 
-          Always check your Rice Status.
-        </li>
-        <li class="list-group-item">
-          <i class="fas fa-poop"></i> 
-          Use <strong>Anti-Toxicity (Spring/Renowed Water, Aqueous Droplet)</strong> Fertilizer to counter Salt Damage.
-        </li>
-        <li class="list-group-item">
-          <i class="fas fa-poop"></i> 
-          Use <strong>Presicide (Eradicating Remedy, Salt + Water, Fish Mint)</strong> Fertilizer to counter some Disease (Rice blight, Rice stripe virus).
-        </li>
-        <li class="list-group-item">
-          <i class="fas fa-poop"></i> 
-          Use <strong>Immunity (Revitalizing Remedy, Salt + Water, Aqueous Droplet)</strong> Fertilizer to counter some Disease (Rice Ragged Stunt Virus, Pecky Rice Disease).
-        </li>
-        <li class="list-group-item">
-          <i class="fas fa-poop"></i> 
-          Use <strong>Herbicide (Reducing Remedy, Aqueous Droplet, Rice Bran + Fish Mint)</strong> Fertilizer to counter Weeds and Herbs.
-        </li>
-        <li class="list-group-item">
-          <i class="fas fa-cloud-sun"></i> 
-          Weather: <strong>Pray for sunny weather</strong> to counter Spindly.
-        </li>
-        <li class="list-group-item">
-          <i class="fas fa-cloud-sun"></i> 
-          Weather: <strong>Pray for cool weather</strong> to counter Heat damage or open both gates.
-        </li>
-        <li class="list-group-item">
-          <i class="fas fa-poop"></i> 
-          Use <strong>Fertilizer</strong> with Rotten Food to boost Stats, Salt (to balanced out Presicide) and Spring/Renowed Water (to balanced out Toxicity) (beware of Salt damage).
-        </li>
-        <li class="list-group-item">
-          <i class="fas fa-poop"></i> 
-          Use <strong>Ingredients</strong> in your Fertilizer that expires and don't give negative effect like <strong>Acorns, Grasshopper or Bee Larva</strong>.
-        </li>
-      </ul>
+      {% include guide-tips.html %}
     </div>
   </div>
