add logger add sort recommended items

--- a/_includes/guide.html
+++ b/_includes/guide.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-md-3">
       <div class="nav flex-column nav-pills" id="farming-guild-pills-tab" role="tablist" aria-orientation="vertical">
-        <a class="nav-link mt-1 farming-guild-pills-balanced-nav-link active" id="farming-guild-pills-balanced-tab" data-toggle="pill" href="#farming-guild-pills-balanced" role="tab" aria-controls="farming-guild-pills-balanced" aria-selected="true" data-spacing="Little far apart">Balanced</a>
-        <a class="nav-link mt-1 farming-guild-pills-yield-nav-link" id="farming-guild-pills-yield-tab" data-toggle="pill" href="#farming-guild-pills-yield" role="tab" aria-controls="farming-guild-pills-yield" aria-selected="false" data-spacing="Balanced">Yield: HP (most amount of rice)</a>
-        <a class="nav-link mt-1 farming-guild-pills-heartiness-nav-link" id="farming-guild-pills-heartiness-tab" data-toggle="pill" href="#farming-guild-pills-heartiness" role="tab" aria-controls="farming-guild-pills-heartiness" aria-selected="false" data-spacing="Little far apart">Heartiness: Strength, Vitality and Gusto</a>
-        <a class="nav-link mt-1 farming-guild-pills-aesthic-nav-link" id="farming-guild-pills-aesthic-tab" data-toggle="pill" href="#farming-guild-pills-aesthic" role="tab" aria-controls="farming-guild-pills-aesthic" aria-selected="false" data-spacing="Little far apart">Aesthic: Luck</a>
-        <a class="nav-link mt-1 farming-guild-pills-aroma-nav-link" id="farming-guild-pills-aroma-tab" data-toggle="pill" href="#farming-guild-pills-aroma" role="tab" aria-controls="farming-guild-pills-aroma" aria-selected="false" data-spacing="Little far apart">Aroma: Magic</a>
+        <a class="nav-link mt-1 farming-guild-pills-balanced-nav-link active" id="farming-guild-pills-balanced-tab" data-toggle="pill" href="#farming-guild-pills-balanced" role="tab" aria-controls="farming-guild-pills-balanced" aria-selected="true" data-spacing="Little far apart" data-name="balanced">Balanced</a>
+        <a class="nav-link mt-1 farming-guild-pills-yield-nav-link" id="farming-guild-pills-yield-tab" data-toggle="pill" href="#farming-guild-pills-yield" role="tab" aria-controls="farming-guild-pills-yield" aria-selected="false" data-spacing="Balanced" data-name="yield">Yield: HP (most amount of rice)</a>
+        <a class="nav-link mt-1 farming-guild-pills-heartiness-nav-link" id="farming-guild-pills-heartiness-tab" data-toggle="pill" href="#farming-guild-pills-heartiness" role="tab" aria-controls="farming-guild-pills-heartiness" aria-selected="false" data-spacing="Little far apart" data-name="heartiness">Heartiness: Strength, Vitality and Gusto</a>
+        <a class="nav-link mt-1 farming-guild-pills-aesthic-nav-link" id="farming-guild-pills-aesthic-tab" data-toggle="pill" href="#farming-guild-pills-aesthic" role="tab" aria-controls="farming-guild-pills-aesthic" aria-selected="false" data-spacing="Little far apart" data-name="aesthic">Aesthic: Luck</a>
+        <a class="nav-link mt-1 farming-guild-pills-aroma-nav-link" id="farming-guild-pills-aroma-tab" data-toggle="pill" href="#farming-guild-pills-aroma" role="tab" aria-controls="farming-guild-pills-aroma" aria-selected="false" data-spacing="Little far apart" data-name="aroma">Aroma: Magic</a>
       </div>
       {% include guide-space.html %}
     </div>
